# coreHTTP

./: .gitmodules  CHANGELOG.md  CMakeLists.txt  MISRA.md  README.md  httpFilePaths.cmake  latest  lexicon.txt  manifest.yml  sbom.spdx
.github/: .cSpellWords.txt  CONTRIBUTING.md  memory_statistics_config.json
_data/: doc_config.json
main/: annotated.html  classes.html  core__http__client_8c.html  core__http__client_8c.js  core__http__client_8h.html  core__http__client_8h_source.html  core__http__client__private_8h.html  core__http__client__private_8h_source.html  core__http__config__defaults_8h.html  core__http__config__defaults_8h_source.html  dir_8ee1a5e78eaec319fe5d64075812fc61.html  functions.html  functions_vars.html  globals.html  globals_defs.html  globals_enum.html  globals_eval.html  globals_func.html  globals_type.html  group__http__basic__types.html  group__http__callback__types.html  group__http__enum__types.html  group__http__response__flags.html  group__http__struct__types.js  http_config.html  http_porting.html  http_transport_interface.html  httpclient_addheader_function.html  httpclient_addrangeheader_function.html  httpclient_initializerequestheaders_function.html  httpclient_readheader_function.html  httpclient_receiveandparsehttpresponse_function.html  httpclient_send_function.html  httpclient_sendhttpdata_function.html  httpclient_sendhttpheaders_function.html  httpclient_strerror_function.html  index.html  navtreeindex0.js  pages.html  struct_h_t_t_p_client___response_header_parsing_callback__t.html  (+7 more)
source/: core_http_client.c  lexicon.txt
test/: CMakeLists.txt  CMock.cmake  create_test.cmake  dependencies.cmake  http_parser_build.cmake  http_send_utest.c
test/cbmc/: .gitignore  lexicon.txt
test/cbmc/include/: callback_stubs.h  core_http_config.h  get_time_stub.h  http_cbmc_state.h  transport_interface_stubs.h
test/cbmc/proofs/: Makefile-project-defines  check-link-stage  run-cbmc-proofs.py
test/cbmc/proofs/HTTPClient_AddHeader/: HTTPClient_AddHeader_harness.c  Makefile
test/cbmc/proofs/HTTPClient_AddRangeHeader/: HTTPClient_AddRangeHeader_harness.c  Makefile
test/cbmc/proofs/HTTPClient_InitializeRequestHeaders/: HTTPClient_InitializeRequestHeaders_harness.c  Makefile
test/cbmc/proofs/HTTPClient_ReadHeader/: HTTPClient_ReadHeader_harness.c  Makefile
test/cbmc/proofs/HTTPClient_Send/: HTTPClient_Send_harness.c  Makefile
test/cbmc/proofs/HTTPClient_Send-contracts/: HTTPClient_Send_harness.c  Makefile  README.md  cbmc-viewer.json  dynamic-frames.sh
test/cbmc/proofs/HTTPClient_Send-contracts/dynamic-frames-logs/: cbmc-log  contracts-log  restrict-log  show-goto-functions-log
test/cbmc/proofs/HTTPClient_strerror/: HTTPClient_strerror_harness.c  Makefile
test/cbmc/proofs/findHeaderFieldParserCallback/: Makefile  findHeaderFieldParserCallback_harness.c
test/cbmc/proofs/findHeaderOnHeaderCompleteCallback/: Makefile  findHeaderOnHeaderCompleteCallback_harness.c
test/cbmc/proofs/findHeaderValueParserCallback/: Makefile  findHeaderValueParserCallback_harness.c
test/cbmc/proofs/httpParserOnBodyCallback/: Makefile  httpParserOnBodyCallback_harness.c
test/cbmc/proofs/httpParserOnHeaderFieldCallback/: Makefile  httpParserOnHeaderFieldCallback_harness.c
test/cbmc/proofs/httpParserOnHeaderValueCallback/: Makefile  httpParserOnHeaderValueCallback_harness.c
test/cbmc/proofs/httpParserOnHeadersCompleteCallback/: Makefile  httpParserOnHeadersCompleteCallback_harness.c
test/cbmc/proofs/httpParserOnMessageBeginCallback/: Makefile  httpParserOnMessageBeginCallback_harness.c
test/cbmc/proofs/httpParserOnMessageCompleteCallback/: Makefile  httpParserOnMessageCompleteCallback_harness.c
test/cbmc/proofs/httpParserOnStatusCallback/: Makefile  httpParserOnStatusCallback_harness.c
test/cbmc/proofs/httpParserOnStatusCompleteCallback/: Makefile  README.md  cbmc-viewer.json  httpParserOnStatusCompleteCallback_harness.c
test/cbmc/sources/: http_cbmc_state.c
test/cbmc/stubs/: HTTPClient_ReadHeader_http_parser_execute.c  HTTPClient_ReadHeader_llhttp_execute.c  HTTPClient_Send_http_parser_execute.c  HTTPClient_Send_llhttp_execute.c  callback_stubs.c  copyCharsUntilNull.c  get_time_stub.c  httpHeaderCpy.c  httpHeaderStrncpy.c  httpHeadersStrncpy.c  memcpy.c  memmove.c  strncpy.c  transport_interface_stubs.c
test/include/: core_http_config.h
test/unit-test/: CMakeLists.txt  core_http_config.h  core_http_send_system_test.c  core_http_send_utest.c  core_http_system_test.c  core_http_utest.c  http_config.h  http_send_utest.c  http_utest.c  lexicon.txt  unit_test_build.cmake
test/utest/: CMakeLists.txt  cmock_build.cmake
v1.0.0/: annotated.html  classes.html  core__http__client_8c.html  core__http__client_8c.js  core__http__client_8h.html  core__http__client_8h.js  core__http__client_8h_source.html  core__http__client__private_8h.html  core__http__client__private_8h_source.html  core__http__config__defaults_8h.html  core__http__config__defaults_8h_source.html  dir_359d2bec989c9a8deeeb9aee335c1c76.html  dir_3750548c40d9045ee3b3d006c00db089.html  dir_49e56c817e5e54854c35e136979f97ca.html  dir_8ee1a5e78eaec319fe5d64075812fc61.html  dir_b2f33c71d4aa5e7af42a1ca61ff5af1b.html  files.html  functions.html  functions_vars.html  globals.html  globals_defs.html  globals_enum.html  globals_eval.html  globals_func.html  globals_type.html  group__http__basic__types.html  group__http__callback__types.html  group__http__callback__types.js  group__http__constants.html  group__http__enum__types.html  group__http__request__flags.html  group__http__response__flags.html  group__http__send__flags.html  group__http__struct__types.html  group__http__struct__types.js  http_config.html  http_design.html  http_functions.html  http_porting.html  http_transport_interface.html  (+19 more)
v2.0.0/: annotated.html  classes.html  core__http__client_8c.html  core__http__client_8h.html  core__http__client_8h_source.html  core__http__client__private_8h.html  core__http__client__private_8h_source.html  core__http__config__defaults_8h.html  core__http__config__defaults_8h_source.html  (+46 more)
(+164 files in other folders)
